--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -21,7 +21,7 @@
     }
   
     .hero__categories ul {
-      padding-left: 20px;
+      //padding-left: 20px;
     }
   
     .latest-product__slider.owl-carousel .owl-nav {
