--- a/css/style.css
+++ b/css/style.css
@@ -17981,10 +17981,12 @@ ol {
 }
 
 .featured__item__pic {
-  height: 270px;
-  position: relative;
-  overflow: hidden;
   background-position: center center;
+  display: block;
+  height: 270px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
 }
 
 .featured__item__pic .product__code {
@@ -18088,6 +18090,20 @@ ol {
   color: #b2b2b2;
   display: block;
   margin-bottom: 4px;
+}
+
+.featured__item__text form {
+  padding: 0 14px;
+}
+
+.featured__item__text form textarea {
+  border: 1px solid #ebebeb;
+  padding: 0 8px;
+  width: 100%;
+}
+
+.featured__item__text form input[type="submit"] {
+  width: 100%;
 }
 
 /*---------------------
@@ -18790,9 +18806,11 @@ ol {
 }
 
 .product__item__pic {
+  display: block;
   height: 270px;
   position: relative;
   overflow: hidden;
+  width: 100%;
 }
 
 .product__item__pic__hover {
@@ -18872,6 +18890,20 @@ ol {
 .product__item__text h5 {
   color: #252525;
   font-weight: 600;
+}
+
+.product__item__text form {
+  padding: 0 14px;
+}
+
+.product__item__text form textarea {
+  border: 1px solid #ebebeb;
+  padding: 0 8px;
+  width: 100%;
+}
+
+.product__item__text form input[type="submit"] {
+  width: 100%;
 }
 
 .product__pagination, .blog__pagination {
@@ -18966,8 +18998,9 @@ ol {
 .product__details__text .product__details__note {
   border: 1px solid #dee2e6;
   height: 100px;
-  width: 375px;
   margin-bottom: 10px;
+  padding: 10px;
+  width: 100%;
 }
 
 .product__details__text p {
@@ -18989,9 +19022,9 @@ ol {
 }
 
 .product__details__text ul {
-  border-top: 1px solid #ebebeb;
-  padding-top: 40px;
-  margin-top: 50px;
+  border-bottom: 1px solid #ebebeb;
+  padding-bottom: 40px;
+  margin-bottom: 50px;
 }
 
 .product__details__text ul li {
@@ -19026,19 +19059,48 @@ ol {
   margin-right: 0;
 }
 
-.product__details__quantity {
-  display: inline-block;
-  margin-right: 6px;
+.product__details__text .primary-btn {
+  margin-bottom: 0 !important;
+  margin-right: 0 !important;
+  height: 50px !important;
 }
 
-.pro-qty {
-  width: 140px;
+.product__details__text .product__details__quantity {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 0;
+}
+
+.product__details__text .pro-qty {
+  width: 160px;
   height: 50px;
   display: inline-block;
   position: relative;
   text-align: center;
   background: #f5f5f5;
-  margin-bottom: 5px;
+  margin-bottom: 0;
+}
+
+.product__details__quantity {
+  display: inline-block;
+  margin-right: 0;
+  width: 100%;
+}
+
+.product__details__quantity .quantity {
+  width: 100%;
+}
+
+.pro-qty {
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  background: #f5f5f5;
+  margin-bottom: 6px;
 }
 
 .pro-qty input {
