--- a/sass/_shop-details.scss
+++ b/sass/_shop-details.scss
@@ -57,8 +57,9 @@
     .product__details__note {
         border: 1px solid #dee2e6;
         height: 100px;
-        width: 375px;
         margin-bottom: 10px;
+        padding: 10px;
+        width: 100%;
     }
 
     p {
@@ -80,9 +81,9 @@
     }
 
     ul {
-        border-top: 1px solid $border;
-        padding-top: 40px;
-        margin-top: 50px;
+        border-bottom: 1px solid $border;
+        padding-bottom: 40px;
+        margin-bottom: 50px;
 
         li {
             font-size: 16px;
@@ -119,21 +120,49 @@
             }
         }
     }
+
+    .primary-btn {
+        margin-bottom: 0 !important;
+        margin-right: 0 !important;
+        height: 50px !important;
+    }
+
+    .product__details__quantity {
+        display: flex;
+        justify-content: space-between;
+        margin-right: 0;
+    }
+
+    .pro-qty {
+        width: 160px;
+        height: 50px;
+        display: inline-block;
+        position: relative;
+        text-align: center;
+        background: $background;
+        margin-bottom: 0;
+    }
 }
 
 .product__details__quantity {
     display: inline-block;
-    margin-right: 6px;
+    margin-right: 0;
+    width: 100%;
+    .quantity {
+        width: 100%;
+    }
 }
 
 .pro-qty {
-    width: 140px;
-    height: 50px;
-    display: inline-block;
+    width: 100%;
+    height: 35px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: relative;
     text-align: center;
     background: $background;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
 
     input {
         height: 100%;
